--- a/public/scss/app.scss
+++ b/public/scss/app.scss
@@ -17,8 +17,10 @@ html {
 .link {
     text-decoration: none;
     color: $color-font-primary;
+
     &__secondary {
         color: $color-font-secondary;
+
         &:hover {
             color: $color-font-secondary-hover;
         }
@@ -29,9 +31,11 @@ html {
     &--secondary {
         color: $color-font-secondary;
     }
+
     &--approved {
         color: $color-approved;
     }
+
     &--danger {
         color: $color-danger;
     }
@@ -98,7 +102,7 @@ html {
                 background-color: $color-bg-grey;
             }
         }
-        
+
     }
 
     li.active {
@@ -171,14 +175,54 @@ html {
     }
 
     &__reject {
-        &:hover {
-            color: $color-danger;
-        }
+        color: $color-danger;
     }
 
     &__approve {
-        &:hover {
-            color: $color-primary;
+        color: $color-approved;
+    }
+}
+
+.showRequest {
+    background-color: $color-bg-grey;
+    width: 100%;
+    height: fit-content;
+    min-height: 100vh;
+    @include flex(column, flex-start, center);
+
+    &__main {
+        @include flex(column, flex-start, flex-start, 30px);
+        width: 600px;
+
+        &__header {
+            @include flex(column, flex-start, flex-start, 2px);
+        }
+
+        &__box {
+            @include flex(column, flex-start, flex-start, 2px);
+            p {
+                color: $color-font-secondary;
+            }
+        }
+
+        &__body {
+            @include flex(column, flex-start, flex-start, 10px);
+            width: 100%;
+
+            &__desc {
+                width: 100%;
+                @include flex(column, flex-start, flex-start, 5px);
+
+                p {
+                    height: fit-content;
+                    min-height: 200px;
+                    border-radius: $radius-input;
+                    padding: 10px;
+                    background-color: $color-input-filled-bg;
+                    width: 100%;
+                    border: $size-input-border-width solid $color-input-border;
+                }
+            }
         }
     }
 }
