--- a/public/css/layouts/dashboard/employee.css
+++ b/public/css/layouts/dashboard/employee.css
@@ -167,11 +167,85 @@ html {
 .request_list__buttons a {
   text-decoration: underline;
 }
-.request_list__buttons__reject:hover {
+.request_list__buttons__reject {
   color: #990a0a;
 }
-.request_list__buttons__approve:hover {
-  color: #5045E6;
+.request_list__buttons__approve {
+  color: #22b52a;
+}
+
+.showRequest {
+  background-color: #F3F3F5;
+  width: 100%;
+  height: fit-content;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0;
+  flex-grow: initial;
+  flex-shrink: initial;
+}
+.showRequest__main {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 30px;
+  flex-grow: initial;
+  flex-shrink: initial;
+  width: 600px;
+}
+.showRequest__main__header {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 2px;
+  flex-grow: initial;
+  flex-shrink: initial;
+}
+.showRequest__main__box {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 2px;
+  flex-grow: initial;
+  flex-shrink: initial;
+}
+.showRequest__main__box p {
+  color: #868686;
+}
+.showRequest__main__body {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 10px;
+  flex-grow: initial;
+  flex-shrink: initial;
+  width: 100%;
+}
+.showRequest__main__body__desc {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 5px;
+  flex-grow: initial;
+  flex-shrink: initial;
+}
+.showRequest__main__body__desc p {
+  height: fit-content;
+  min-height: 200px;
+  border-radius: 7px;
+  padding: 10px;
+  background-color: #E7F0FD;
+  width: 100%;
+  border: 1px solid #bdbdbd;
 }
 
 .Employee__requestList {
