--- a/public/css/layouts/dashboard/Index.css
+++ b/public/css/layouts/dashboard/Index.css
@@ -71,7 +71,7 @@ html {
 }
 
 .pad {
-  padding: 0 150px;
+  padding: 0 20px;
 }
 
 .box {
@@ -311,33 +311,117 @@ html {
   background-color: #F3F3F5;
   min-height: 100vh;
   height: fit-content;
-  padding-bottom: 30px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 0;
+  flex-grow: initial;
+  flex-shrink: initial;
+  position: relative;
 }
-#AppLayout .header {
-  padding-top: 30px;
-  padding-bottom: 30px;
+#AppLayout__nav {
+  padding: 0 10px;
+  width: 250px;
+  height: 100vh;
+  flex: 0 0 auto;
+  background-color: #2c3e50;
+  color: white;
+  transition: width 0.3s ease;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 10px;
+  flex-grow: initial;
+  flex-shrink: initial;
+}
+#AppLayout .AppLayout__nav__main {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 10px;
+  flex-grow: initial;
+  flex-shrink: initial;
+}
+#AppLayout .AppLayout__nav__main > div {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px;
+  flex-grow: initial;
+  flex-shrink: initial;
+}
+#AppLayout .AppLayout__nav__main > div .AppLayout__nav__main__icon {
+  width: fit-content;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0;
+  flex-grow: initial;
+  flex-shrink: initial;
+}
+#AppLayout .AppLayout__nav__main > div .AppLayout__nav__main__icon svg {
+  color: white !important;
+  width: 30px;
+  height: 30px;
+}
+#AppLayout .AppLayout__nav__main > div .AppLayout__nav__main__content {
+  color: white;
+}
+#AppLayout .AppLayout__nav__profile {
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0;
+  flex-grow: initial;
+  flex-shrink: initial;
+}
+#AppLayout .AppLayout__nav__reduced {
+  width: 55px;
+}
+#AppLayout .AppLayout__nav__reduced .AppLayout__nav__main__content {
+  display: none;
+}
+#AppLayout .AppLayout__nav__reduced .AppLayout__nav__profile > * {
+  display: none;
+}
+#AppLayout .AppLayout__main {
+  flex: 1 1 auto;
+  width: 100%;
+  overflow-y: auto;
+}
+#AppLayout .AppLayout__main .header {
+  height: 50px;
   background-color: #ffffff;
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
   gap: 50px;
   flex-grow: initial;
   flex-shrink: initial;
   line-height: 1;
 }
-#AppLayout .header__title {
+#AppLayout .AppLayout__main .header__title {
   line-height: 1;
   width: fit-content;
   display: block;
   white-space: pre;
 }
-#AppLayout .header__main {
+#AppLayout .AppLayout__main .header__main {
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
   gap: 0;
   flex-grow: initial;
@@ -346,26 +430,23 @@ html {
   color: #868686;
   font-weight: bold;
 }
-#AppLayout .header__main a {
+#AppLayout .AppLayout__main .header__main__logout {
   color: #868686;
 }
-#AppLayout .header__main a:hover {
-  color: #5a5a5a;
+#AppLayout .AppLayout__main .header__main__logout:hover {
+  color: #990a0a !important;
 }
-#AppLayout .header__main .nav {
+#AppLayout .AppLayout__main main {
+  padding: 0 20px;
+  height: 100%;
+  padding-top: 30px;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
   gap: 30px;
   flex-grow: initial;
   flex-shrink: initial;
-}
-#AppLayout .header__main .nav__selected {
-  color: #5a5a5a;
-}
-#AppLayout .header__main__logout:hover {
-  color: #990a0a !important;
 }
 #AppLayout .form-box {
   display: flex;
@@ -409,16 +490,23 @@ html {
   width: 100%;
   text-overflow: ellipsis;
 }
-#AppLayout main {
-  height: 100%;
-  padding-top: 30px;
+#AppLayout__main__toggleNavBar {
+  cursor: pointer;
+  width: fit-content;
+  height: fit-content;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  gap: 30px;
+  justify-content: center;
+  align-items: center;
+  gap: 0;
   flex-grow: initial;
   flex-shrink: initial;
+  border: none;
+  background-color: transparent;
+}
+#AppLayout__main__toggleNavBar svg {
+  width: 25px;
+  height: 25px;
 }
 
 /*# sourceMappingURL=Index.css.map */
